# mnemosyne

./: .env.example  .gitignore  LICENSE  README.md  render.yaml
backend/: .dockerignore  Dockerfile  fix_chunks.py  list_models.py  mnemosyne.db  pyproject.toml  requirements.txt  test_mapping.py  test_pdf.py
backend/app/: main.py
backend/app/api/: auth.py
backend/app/api/routes/: concepts.py  documents.py  memory.py  recall.py  tutor.py
backend/app/core/: config.py
backend/app/models/: database.py  weightage.py
backend/app/routers/: download.py  pipeline.py  status.py  upload.py
backend/app/services/: ai_service.py  analyser.py  embedding_service.py  extractor.py  generator.py  llm_router.py  mapper.py  memory_service.py  pdf_service.py  rag_service.py
backend/tests/: test_analyser.py
backend/tests/fixtures/: mock_pyq.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx  template.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/document/[id]/: page.tsx
frontend/src/components/: AnimatedBackground.tsx  ApiKeyModal.tsx  Nav.tsx  Preloader.tsx
frontend/src/components/reactbits/: ShinyText.tsx  SpotlightCard.css  SpotlightCard.tsx  StarBorder.css  StarBorder.tsx
frontend/src/components/sections/: EngineSection.tsx  MethodSection.tsx
frontend/src/components/ui/: CustomCursor.tsx  LenisProvider.tsx  MagneticButton.tsx  Navbar.tsx  Noise.tsx  Preloader.tsx
frontend/src/components/upload/: DropZone.tsx
frontend/src/lib/: api.ts
(+3 files in other folders)
