[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.103.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "networkx>=3.6.1",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.47.0",
]
