[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "networkx>=3.6.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.47.0",
]
